# IACSRAG_rev2

./: .clineignore  .gitignore  3_E1.md  README.md  TODO_TRACKER.md  check_embedding_time.py  check_spacy_chunks.py  debug_chunking_strategy.py  docker-compose.yml  file_replacer.py  main.py  namingconvention.md  pyproject.toml  requirements.txt  schema.py  test_batch_timing.py  test_batch_upload.py  test_chunking_speed.py  test_consumer_direct.py  test_document_event_router.py  test_kafka_email_batch.py  test_multiplex.py  test_pdf_complete.py  test_pdf_upload.py  test_timing_detail.py  todo.md
content_email/: email_attachment.py  email_batch_processor.py  email_embedder.py  email_repository.py  orchestrator.py  schema.py
content_email/services/: email_attachment_service.py  email_embedding_service.py  email_processor.py  email_storage_service.py
content_email/utils/: email_helpers.py
content_pdf/: __init__.py  orchestrator.py  pdf_chunker.py  pdf_consumer.py  pdf_embedder.py  pdf_processor.py  repository.py  schema.py
content_pdf/chunking/: base.py  character_chunker.py  embedding_semantic_chunker.py  recursive_semantic_chunker.py  semantic_chunker.py  spacy_chunk_tracker.py  spacy_semantic_chunker.py  spacy_utils.py  token_chunker.py
doc/: ImplementationPlan.md  pdfUpload_implementation.md  project_architecture.md
infra/: __init__.py
scripts/: test_kafka_email_events.py
upload_pdf_service/: __init__.py  event_publisher.py  orchestrator.py  upload_handler.py
upload_service/: event_publisher.py  file_hasher.py  orchestrator.py  repository.py  schema.py
(+34 files in other folders)
