[project]
name = "iacsrag-rev2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "aiokafka==0.10.0",
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "langchain==0.1.0",
    "motor==3.3.2",
    "pdfplumber==0.10.3",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pymongo==4.6.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "qdrant-client==1.7.0",
    "tenacity==8.2.3",
    "uvicorn[standard]==0.24.0",
]
